--- a/idcard.html
+++ b/idcard.html
@@ -4,148 +4,228 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ID Card Generator | Noorussalam Madrasa</title>
-
-  <!-- Google Font -->
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
-
-  <!-- html2canvas for PNG Download -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
-
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
     body {
+      background: linear-gradient(135deg, #0b5ed7 0%, #74b9ff 100%);
       font-family: 'Poppins', sans-serif;
-      background: #f1f5f9;
-      padding: 20px;
+      min-height: 100vh;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      padding: 30px;
     }
-
-    .container {
-      max-width: 380px;
-      margin: auto;
-      text-align: center;
-    }
-
-    .id-card {
+    .id-form {
+      background: #fff;
+      border-radius: 15px;
+      box-shadow: 0 5px 20px rgba(0,0,0,0.2);
+      padding: 30px;
       width: 100%;
-      background: white;
-      padding: 20px;
-      border-radius: 16px;
-      box-shadow: 0 6px 25px rgba(0,0,0,0.12);
-      border: 3px solid #004aad;
-      position: relative;
+      max-width: 420px;
+      text-align: center;
+      margin-bottom: 40px;
+      animation: fadeIn 0.8s ease;
     }
-
-    .id-card img.photo {
-      width: 110px;
-      height: 110px;
-      border-radius: 50%;
-      object-fit: cover;
-      border: 4px solid #004aad;
-      margin-top: 10px;
-    }
-
-    .title {
-      font-size: 1.4rem;
+    .id-form h2 {
+      color: #0b5ed7;
       font-weight: 700;
-      color: #004aad;
-      margin-bottom: 5px;
+      margin-bottom: 15px;
     }
-
-    .sub-title {
-      font-size: 0.9rem;
-      font-weight: 500;
-      margin-bottom: 12px;
-      color: #555;
+    .id-form p {
+      color: #6c757d;
+      font-size: 14px;
+      margin-bottom: 25px;
     }
-
-    .details {
-      text-align: left;
-      margin-top: 10px;
-      font-size: 0.95rem;
-      font-weight: 500;
-    }
-
-    .details span {
-      font-weight: 600;
-      color: #004aad;
-    }
-
-    .download-btn {
-      margin-top: 20px;
-      padding: 12px 20px;
-      background: #004aad;
-      color: white;
+    .id-form button {
+      background: #0b5ed7;
       border: none;
-      border-radius: 8px;
-      font-size: 1rem;
-      cursor: pointer;
+      padding: 10px 0;
       width: 100%;
+      border-radius: 8px;
+      font-weight: 600;
+      color: #fff;
+      transition: all 0.3s ease;
     }
-
-    .download-btn:hover {
-      background: #00337a;
+    .id-form button:hover {
+      background: #0849a2;
     }
-
-    .footer {
-      margin-top: 25px;
-      text-align: center;
-      color: #777;
-      font-size: 0.85rem;
-    }
-
-    .home-btn {
-      display: inline-block;
-      margin-top: 8px;
-      padding: 8px 16px;
-      background: #004aad;
-      color: white;
-      text-decoration: none;
-      border-radius: 6px;
-      font-size: 0.85rem;
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(-10px); }
+      to { opacity: 1; transform: translateY(0); }
     }
   </style>
 </head>
 <body>
 
-<div class="container">
-  <h2 class="title">NOORUSSALAM MADRASA</h2>
-  <p class="sub-title">Kambippalam - Kerala Estate</p>
-
-  <!-- ID CARD BOX -->
-  <div id="idCard" class="id-card">
-
-    <img src="https://via.placeholder.com/150" class="photo" id="photo">
-
-    <h3 style="margin-top:10px; font-size:1.2rem;" id="name">Student Name</h3>
-
-    <div class="details">
-      <p><span>Admission No:</span> <span id="adm">0001</span></p>
-      <p><span>Class:</span> <span id="class">5</span></p>
-      <p><span>Division:</span> <span id="div">A</span></p>
-      <p><span>Blood Group:</span> <span id="blood">O+</span></p>
-      <p><span>Address:</span> <span id="address">Example Address</span></p>
-    </div>
+  <!-- Form -->
+  <div class="id-form">
+    <img src="https://i.ibb.co/7Jw5TBJg/NSM-LOGO-PNG.png" width="80" alt="logo">
+    <h2>NOORUSSALAM MADRASA</h2>
+    <p>Enter your Class and Roll Number to generate your ID card</p>
+    <form id="idForm">
+      <div class="mb-3 text-start">
+        <label class="form-label">Class</label>
+        <input type="text" name="class" class="form-control" placeholder="Enter Class" required>
+      </div>
+      <div class="mb-3 text-start">
+        <label class="form-label">Roll Number</label>
+        <input type="text" name="roll" class="form-control" placeholder="Enter Roll Number" required>
+      </div>
+      <button type="submit">Generate Digital ID Card</button>
+    </form>
   </div>
 
-  <button class="download-btn" onclick="downloadCard()">Download ID Card (PNG)</button>
+  <script>
+    const scriptURL = 'https://script.google.com/macros/s/AKfycbzwNp2D-Kg6yGaiGaP5npYiyGXRoGI3eTrf_DdHCXo-4Lo2mw2kLQEBucmNl5VkQs8R/exec';
 
-  <div class="footer">
-    <p>© Noorussalam Madrasa</p>
-    <a href="index.html" class="home-btn">Back to Home</a>
-  </div>
-</div>
+    document.getElementById('idForm').addEventListener('submit', e => {
+      e.preventDefault();
+      const formData = new FormData(e.target);
+      const classVal = formData.get('class');
+      const rollVal = formData.get('roll');
 
-<script>
-function downloadCard() {
-  const card = document.getElementById("idCard");
+      const url = `${scriptURL}?class=${encodeURIComponent(classVal)}&roll=${encodeURIComponent(rollVal)}`;
 
-  html2canvas(card, { scale: 3 }).then(canvas => {
-    const link = document.createElement("a");
-    link.download = "ID_Card.png";
-    link.href = canvas.toDataURL("image/png");
-    link.click();
-  });
-}
-</script>
+      const newWin = window.open("", "_blank");
+      newWin.document.write("<h3 style='text-align:center;font-family:Poppins;color:#0b5ed7;'>Loading ID Card...</h3>");
 
+      fetch(url)
+        .then(res => res.json())
+        .then(data => {
+          if (data.result === 'success') {
+            const s = data.student;
+            const qrData = `UID: ${s.UID}, Admission: ${s.AdmissionNumber}, Name: ${s.FullName}, Class: ${s.ClassLevel}, Roll: ${s.RollNumber}`;
+            const qrURL = `https://api.qrserver.com/v1/create-qr-code/?data=${encodeURIComponent(qrData)}&size=100x100`;
+
+            const html = `
+              <html>
+              <head>
+                <title>${s.FullName} | ID Card</title>
+                <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+                <style>
+
+                  @media print {
+                    body {
+                      -webkit-print-color-adjust: exact !important;
+                      print-color-adjust: exact !important;
+                    }
+                    .print-btn { display: none !important; }
+                  }
+
+                  body {
+                    background: #f0f4ff;
+                    font-family: 'Poppins', sans-serif;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    height: 100vh;
+                  }
+                  .id-card {
+                    width: 380px;
+                    background: white;
+                    border-radius: 20px;
+                    box-shadow: 0 8px 25px rgba(0,0,0,0.2);
+                    overflow: hidden;
+                    text-align: center;
+                    border: 5px solid #0b5ed7;
+                  }
+                  .id-header {
+                    background: linear-gradient(90deg, #0b5ed7, #74b9ff);
+                    color: white;
+                    padding: 12px;
+                  }
+                  .id-header h5 {
+                    margin: 0;
+                    font-size: 18px;
+                    font-weight: 700;
+                    line-height: 1.3;
+                  }
+                  .id-header small {
+                    font-size: 12px;
+                    display: block;
+                    opacity: 0.9;
+                  }
+                  .id-body {
+                    padding: 20px;
+                  }
+                  .id-photo {
+                    width: 100px;
+                    height: 100px;
+                    border-radius: 50%;
+                    object-fit: cover;
+                    margin-top: -20px;
+                    border: 4px solid white;
+                    box-shadow: 0 0 10px rgba(0,0,0,0.3);
+                  }
+                  .id-body h5 { color: #0b5ed7; margin-top: 10px; font-weight: 700; }
+                  .id-body p { margin: 3px 0; color: #333; font-size: 14px; }
+                  .qr-code { margin-top: 10px; }
+                  .academic-year {
+                    font-weight: 600;
+                    color: #0b5ed7;
+                    margin-top: 8px;
+                    font-size: 15px;
+                    letter-spacing: 0.5px;
+                  }
+
+                  .print-btn {
+                    margin-top: 20px;
+                    padding: 10px 20px;
+                    background: #0b5ed7;
+                    color: white;
+                    border: none;
+                    border-radius: 10px;
+                    font-size: 16px;
+                  }
+
+                </style>
+              </head>
+              <body>
+
+                <div>
+                  <button class="print-btn" onclick="window.print()">Print ID Card</button>
+
+                  <div class="id-card">
+                    <div class="id-header">
+                      <h5>NOORUSSALAM SECONDARY MADRASA</h5>
+                      <small>Kambippalam Kerala Estate, Malappuram Dt.<br>Email: noorussalam6110@gmail.com</small>
+                      <small>Under SKIMVB, Reg No:6110</small>
+                    </div>
+                    <div class="id-body">
+                      <img src="${s.PhotoURL || 'https://via.placeholder.com/100'}" class="id-photo">
+
+                      <h5>${s.FullName}</h5>
+                      <p><strong>UID:</strong> ${s.UID}</p>
+                      <p><strong>Admission No:</strong> ${s.AdmissionNumber}</p>
+                      <p><strong>Father’s Name:</strong> ${s.FatherName}</p>
+                      <p><strong>Class:</strong> ${s.ClassLevel}</p>
+                      <p><strong>Roll No:</strong> ${s.RollNumber}</p>
+                      <p><strong>Phone:</strong> ${s.Phone}</p>
+
+                      <div class="qr-code">
+                        <img src="${qrURL}">
+                        <p class="academic-year">Academic Year: 2025–26</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
+              </body>
+              </html>
+            `;
+
+            newWin.document.open();
+            newWin.document.write(html);
+            newWin.document.close();
+          } else {
+            newWin.document.write(`<h3 style='color:red;text-align:center;'>${data.message}</h3>`);
+          }
+        })
+        .catch(() => {
+          newWin.document.write("<h3 style='color:red;text-align:center;'>Error fetching data.</h3>");
+        });
+    });
+  </script>
 </body>
 </html>
