--- a/contact.html
+++ b/contact.html
@@ -11,6 +11,9 @@
   <!-- Font Awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
+  <!-- AOS Animation Library -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" />
+
   <style>
     body {
       background-color: #0b1a3b;
@@ -18,11 +21,42 @@
       font-family: 'Poppins', sans-serif;
     }
 
-    header {
+    nav {
       background: linear-gradient(135deg, #002B5B, #004AAD);
       box-shadow: 0 2px 8px rgba(0,0,0,0.3);
     }
 
+    .navbar-brand {
+      font-weight: 700;
+      color: #FFD700 !important;
+    }
+
+    .nav-link {
+      color: #fff !important;
+      font-weight: 500;
+      transition: 0.3s;
+    }
+    .nav-link:hover {
+      color: #FFD700 !important;
+    }
+
+    /* Donate Button */
+    .donate-btn {
+      background: #FFD700;
+      color: #0b1a3b;
+      font-weight: 600;
+      border-radius: 30px;
+      padding: 8px 25px;
+      box-shadow: 0 0 12px #FFD700AA;
+      transition: 0.3s;
+    }
+    .donate-btn:hover {
+      background: #ffea70;
+      box-shadow: 0 0 18px #FFD700;
+      color: #0b1a3b;
+    }
+
+    /* Contact Section */
     #contact {
       background: linear-gradient(180deg, #0b1a3b 0%, #001A33 100%);
       border-top: 3px solid #0056b3;
@@ -38,7 +72,6 @@
       color: #fff;
       transition: 0.3s;
     }
-
     .form-control:focus {
       background-color: rgba(255,255,255,0.15);
       border-color: #FFD700;
@@ -50,7 +83,6 @@
       border: none;
       transition: 0.3s;
     }
-
     .btn-primary:hover {
       background-color: #005ce6;
       transform: translateY(-2px);
@@ -60,7 +92,6 @@
       color: #FFD700;
       border-color: #FFD700;
     }
-
     .btn-outline-primary:hover {
       background-color: #FFD700;
       color: #0b1a3b;
@@ -79,7 +110,6 @@
       border: 1px solid #FFD700;
       transition: 0.3s;
     }
-
     .social-btn .btn:hover {
       background-color: #FFD700;
       color: #0b1a3b;
@@ -106,7 +136,6 @@
       color: #00ff99 !important;
       border: 1px solid #00ff99 !important;
     }
-
     .alert-danger {
       background-color: #330000 !important;
       color: #ff6666 !important;
@@ -116,8 +145,40 @@
 </head>
 <body>
 
-  <!-- HEADER -->
-  <header class="text-white text-center py-4 shadow-sm">
+  <!-- NAVBAR -->
+  <nav class="navbar navbar-expand-lg navbar-dark py-3" data-aos="fade-down">
+    <div class="container">
+      <a class="navbar-brand" href="index.html">
+        Noorussalam Madrasa
+      </a>
+
+      <button class="navbar-toggler text-warning border-warning" type="button"
+              data-bs-toggle="collapse" data-bs-target="#navMenu">
+        <i class="fa fa-bars"></i>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navMenu">
+        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link" href="index.html">Home</a>
+          </li>
+
+          <li class="nav-item">
+            <a class="nav-link" href="contact.html">Contact</a>
+          </li>
+
+          <li class="nav-item ms-lg-3">
+            <a href="donation.html" class="donate-btn">
+              <i class="fa-solid fa-hand-holding-heart me-1"></i> Donate
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+  <!-- PAGE TITLE -->
+  <header class="text-white text-center py-4 shadow-sm" data-aos="zoom-in">
     <h2 class="mb-1">Contact Us</h2>
     <p class="mb-0 text-light">Get in touch with Noorussalam Madrasa</p>
   </header>
@@ -128,7 +189,7 @@
       <div class="row g-4 align-items-center">
 
         <!-- Contact Details -->
-        <div class="col-md-6">
+        <div class="col-md-6" data-aos="fade-right">
           <h4>Contact Information</h4>
           <p class="text-light small">Prefer phone? Call: <strong>+91 70346 78818</strong></p>
           <ul class="list-unstyled small text-light">
@@ -136,7 +197,7 @@
             <li><i class="fa-solid fa-envelope text-warning me-2"></i> noorussalam6110@gmail.com</li>
           </ul>
 
-          <!-- Social Icons (Facebook, Instagram, WhatsApp) -->
+          <!-- Social Icons -->
           <div class="mt-4 social-btn">
             <a class="btn me-2" href="#"><i class="fa-brands fa-facebook-f"></i></a>
             <a class="btn me-2" href="#"><i class="fa-brands fa-instagram"></i></a>
@@ -148,7 +209,7 @@
         </div>
 
         <!-- Contact Form -->
-        <div class="col-md-6">
+        <div class="col-md-6" data-aos="fade-left">
           <h5 class="text-warning mb-3">Send a Message</h5>
           <form id="contactForm" onsubmit="return submitContact(event)">
             <div class="mb-3"><input class="form-control" id="cname" placeholder="Your Name" required></div>
@@ -157,28 +218,32 @@
             <button class="btn btn-primary w-100">Send Message</button>
           </form>
 
-          <!-- Alert Box -->
           <div id="contactAlert" class="mt-3" style="display:none"></div>
         </div>
 
       </div>
 
-      <!-- Back to Home -->
-      <div class="text-center mt-5">
+      <div class="text-center mt-5" data-aos="zoom-in-up">
         <a href="index.html" class="btn btn-outline-primary px-4">← Back to Home</a>
       </div>
     </div>
   </section>
 
   <!-- FOOTER -->
-  <footer class="text-center py-3 mt-4">
+  <footer class="text-center py-3 mt-4" data-aos="fade-up">
     <small>© 2025 All rights reserved | Noorussalam Madrasa</small>
   </footer>
 
   <!-- Scripts -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
   <script>
+    AOS.init({
+      duration: 1200,
+      once: true,
+      offset: 120,
+    });
+
     function submitContact(e){
       e.preventDefault();
 
@@ -205,17 +270,9 @@
       el.classList.add('alert-' + (type === 'success' ? 'success' : 'danger'));
       el.textContent = msg;
 
-      setTimeout(() => {
-        el.classList.add('show'); // Fade-in
-      }, 50);
-
-      setTimeout(() => {
-        el.classList.remove('show'); // Fade-out
-      }, 5000);
-
-      setTimeout(() => {
-        el.style.display = 'none';
-      }, 5600);
+      setTimeout(() => { el.classList.add('show'); }, 50);
+      setTimeout(() => { el.classList.remove('show'); }, 5000);
+      setTimeout(() => { el.style.display = 'none'; }, 5600);
     }
   </script>
 
